Closed
Bug 245965
Opened 21 years ago
Closed 21 years ago
Forcing Visual Bidi through prefs doesn't work
Categories
(Core :: Layout: Text and Fonts, defect)
Core
Layout: Text and Fonts
Tracking
()
RESOLVED
FIXED
People
(Reporter: smontagu, Assigned: smontagu)
Details
Attachments
(1 file)
|
1.10 KB,
patch
|
mkaply
:
review+
dveditz
:
superreview+
|
Details | Diff | Splinter Review |
Alex Shensis from IBM drew my attention to this.
Steps to reproduce:
1) set the bidi.texttype to 3 in prefs or through about:config
2) go to a page with logical bidi text, e.g.
http://smontagu.org/nscpsite/testcases/Bidi/BasicLogical.html
Expected results: right-to-left text should appear backwards
Actual results: right-to-left text appears correctly
3) go to a page with visual bidi text, e.g.
http://smontagu.org/nscpsite/testcases/Bidi/BasicVisual.html
Expected results: right-to-left text should appear correctly
Actual results: right-to-left text appears correctly (so no bug here, but noting
this case for regression testing)
| Assignee | ||
Comment 1•21 years ago
|
||
The problem was in nsPresContext::UpdateCharset(), where the visual mode was
always being set from the charset, treading on the pref.
| Assignee | ||
Comment 2•21 years ago
|
||
By the way, with this fix setting bidi.controlsTextMode=3 also works on pages
with Bidi forced to visual.
| Assignee | ||
Updated•21 years ago
|
Attachment #150331 -
Flags: superreview?(roc)
Attachment #150331 -
Flags: review?(roc)
Comment 3•21 years ago
|
||
Comment on attachment 150331 [details] [diff] [review]
Fix
r=mkaply
I think roc is out of town...
Attachment #150331 -
Flags: review?(roc) → review+
| Assignee | ||
Updated•21 years ago
|
Attachment #150331 -
Flags: superreview?(roc) → superreview?(dveditz)
Comment 4•21 years ago
|
||
Comment on attachment 150331 [details] [diff] [review]
Fix
sr=dveditz
Attachment #150331 -
Flags: superreview?(dveditz) → superreview+
| Assignee | ||
Comment 5•21 years ago
|
||
Fix checked in.
Status: NEW → RESOLVED
Closed: 21 years ago
Resolution: --- → FIXED
Component: Layout: BiDi Hebrew & Arabic → Layout: Text
QA Contact: zach → layout.fonts-and-text
You need to log in
before you can comment on or make changes to this bug.
Description
•