Bug 245965: Forcing visual Bidi through preferences doesn't work. r=mkaply, sr=dveditz.